<resources>
    <string name="app_name">coNECTAR</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="activityStatus">
        <item>I want to hangout now!</item>
        <item>I want to hangout sometime soon</item>
        <item>I do not want to hangout now</item>
    </string-array>

    <string-array name="possible_interests">
        <item>Reading</item>
        <item>Cooking</item>
        <item>Football</item>
        <item>Soccer</item>
        <item>Crafts</item>
        <item>Movies</item>
        <item>Snowboarding</item>
        <item>Board Games</item>
        <item>Music</item>
        <item>Shopping</item>
        //10
        <item>Basketball</item>
        <item>Swimming</item>
        <item>Working Out</item>
        <item>Hiking</item>
        <item>Volunteering</item>
        //15
    </string-array>


    <!-- Strings for the main menu -->
    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_editProfile">Edit Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_changeStatus">Change Status</string>
    <string name="menu_newProfile">New Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_report">Report</string>
    <string name="menu_login">Login</string>
    <string name="menu_managementHeader">Account Management</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conectar_about">coNECTAR is an app designed to bring people together. It aims to pair people who wouldn\'t have met otherwise and inspire people to try new things.</string>

</resources>
