<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="@string/menu_search"
            android:onClick="getSearchScreen"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_action_messages"
            android:title="@string/menu_messages"
            android:onClick="getMessagesScreen"/>
        <item
            android:id="@+id/nav_changeStatus"
            android:icon="@drawable/ic_action_status"
            android:title="@string/menu_changeStatus"
            android:onClick="getChangeStatusScreen"/>
        <item
            android:id="@+id/nav_editProfile"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_editProfile"
            android:onClick="getEditProfileStatusScreen"/>
        <item
            android:id="@+id/nav_newProfile"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_newProfile"
            android:onClick="getNewProfileScreen"/>

    </group>

    <item android:title="@string/menu_managementHeader">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/menu_settings"
                android:onClick="getSettingsScreen"
                />
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_action_report"
                android:title="@string/menu_report"
                android:onClick="getReportScreen"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/menu_logout"
                android:onClick="getLogoutScreen"/>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/menu_login"
                android:onClick="getLoginScreen"/>
        </menu>
    </item>

</menu>
